Add Database Solution

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "generate-migration": "drizzle-kit generate:pg --out infrastructure/db/migration --schema src/db/schema.ts",
+    "migrate": "ts-node src/db/migrate.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
